--- a/deployments/deploy.yml
+++ b/deployments/deploy.yml
@@ -7,6 +7,8 @@ spec:
   selector:
     matchLabels:
       app: hello-world
+  revisionHistoryLimit: 5
+  progressDeadlineSeconds: 300
   minReadySeconds: 10
   strategy:
     type: RollingUpdate
@@ -20,6 +22,6 @@ spec:
     spec:
       containers:
       - name: hello-pod
-        image: nigelpoulton/k8sbook:latest
+        image: nigelpoulton/k8sbook:1.0
         ports:
         - containerPort: 8080
